<resources>
    <string name="app_name">Orgs</string>
    <string name="ola_android">Ola Android</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="descricao_desc">Descriçao Desc</string>
    <string name="descricao_asc">Descrição Asc</string>
    <string name="nome_desc">Nome Desc</string>
    <string name="nome_asc">Nome ASc</string>
    <string name="sort">Ordenar</string>
    <string name="valor_asc">Valor Asc</string>
    <string name="valor_desc">Valor Desc</string>
    <string name="sem_ordem">Sem Ordem</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="cadastrar_usuario">Cadastrar Usuario</string>
    <string name="logout">Sair\n</string>
</resources>