<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/subMenuIcon"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">


        <menu>
            <item
                android:id="@+id/menuNomeAsc"
                android:title="@string/nome_asc"
                />
            <item
                android:id="@+id/menuNomeDesc"
                android:title="@string/nome_desc"
                />
            <item
                android:id="@+id/menuDescricaoAsc"
                android:title="@string/descricao_asc"
                />
            <item
                android:id="@+id/menuDescricaoDesc"
                android:title="@string/descricao_desc"
                />
            <item
                android:id="@+id/menuValorAsc"
                android:title="@string/valor_asc"
                />
            <item
                android:id="@+id/menuValorDesc"
                android:title="@string/valor_desc"
                />
            <item
                android:id="@+id/semOrdem"
                android:title="@string/sem_ordem"
                />
            </menu>

    </item>

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>

